adult/logs/create_fluctuations_15091918_633.out
SLURM_JOBID:  15092554
SLURM_ARRAY_TASK_ID:  633
SLURM_ARRAY_JOB_ID:  15091918
  File "./baseline/adv_ratio.py", line 97
    if i % 20 == 0:
    ^
IndentationError: unexpected indent
('baseline', 6, 0.002, 20)


